Prevent autosuggestions overlapping search entry

--- a/scss/nhse.scss
+++ b/scss/nhse.scss
@@ -1248,6 +1248,7 @@ td {
   width: 100%;
   z-index: 1;
   margin-bottom: 0;
+  top:100%;
 }
 
 .autosuggestion-option .autosuggestion-icon {
